# studysync

./: .gitignore  BACKLOG.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  mobile-ci.yml  web-ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e3071d211553_create_users_table.py  f0e315aa0886_create_notes_and_note_reviews_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/application/: auth_service.py  livekit_service.py  notes_service.py  pomodoro_service.py  ports.py  room_service.py
backend/app/domain/: __init__.py  note.py  notes_errors.py  pomodoro.py  ports.py  room.py  user.py
backend/app/infrastructure/: __init__.py  database.py  livekit_client.py  models.py  redis_client.py
backend/app/infrastructure/repositories/: note_repository.py  room_repository.py  user_repository.py
backend/app/infrastructure/storage/: in_memory_storage.py  local_disk_storage.py
backend/app/presentation/: __init__.py
backend/app/presentation/api/v1/: auth_routes.py  livekit_routes.py  notes_routes.py  room_routes.py  user_routes.py
backend/app/presentation/ws/: __init__.py  rooms_ws.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth.py  test_livekit.py  test_notes.py  test_pomodoro.py  test_rooms.py
docs/adr/: 001-architecture.md
docs/api/: schema.md
docs/plan/: 03-pomodoro-sync.md  04-livekit-backend.md  (+2 more)
web/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+18 files in other folders)
