[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "studysync-backend"
version = "0.1.0"
description = "StudySync — collaborative study platform backend"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Erardo Aldana Pessoa", email = "eap59@alu.ua.es"},
]
dependencies = [
    "fastapi[standard]>=0.136.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "redis>=5.0",
    "livekit-api>=0.7",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.4",
    "aiosqlite>=0.20",
    "fakeredis>=2.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
